--- a/webapp/.env
+++ b/webapp/.env
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=AirControl
 APP_ENV=production
 APP_KEY=base64:uJxlkJ8kt1cKze8fFutnv8FWkrILnd/R1bbQIds2upU=
 APP_DEBUG=false
-# APP_URL=http://localhost
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
